@@ -5,7 +5,7 @@ For the build instructions, see BUILD.
 
 For the documentation see doc/pdf and doc/html (if you didn't download the
 release but checked out from SVN, these directories will be empty and the
-documentation would have to be built from the docbooc sources; see BUILD
+documentation would have to be built from the docbook sources; see BUILD
 for instructions).
 
 The documentation of the latest features that haven't been collected into
