@@ -116,6 +116,8 @@ See the file COPYRIGHT for the copyright notice and license information
 
 	<xi:include href="file:///DOCS/800ref.xml"/>
 
+	<xi:include href="file:///DOCS/990relnotes.xml"/>
+
 	<xi:include href="file:///DOCS/biblio.xml"/>
 
 	<index/>
