@@ -1,83 +1,88 @@
-RowType.xs
-PerlSortCondition.cpp
 AggregatorContext.xs
+AggregatorType.xs
+BUILD
+Changes
+FrameMark.xs
+IndexType.xs
+Label.xs
+MANIFEST
+Makefile.PL
+PerlAggregator.cpp
+PerlAggregator.h
+PerlCallback.cpp
+PerlCallback.h
+PerlSortCondition.cpp
+PerlSortCondition.h
+README
+Row.xs
+RowHandle.xs
+RowType.xs
+Rowop.xs
+Table.xs
+TableType.xs
+Tray.xs
 Triceps.xs
-const-c.inc
 TricepsPerl.cpp
-t/xAgg.t
-t/Row.t
-t/xWindow.t
+TricepsPerl.h
+Unit.xs
+UnitTracer.xs
+WrapAggregatorContext.h
+const-c.inc
+const-xs.inc
+lib/Triceps.pm
+lib/Triceps/AggregatorContext.pm
+lib/Triceps/Collapse.pm
+lib/Triceps/Fields.pm
+lib/Triceps/JoinTwo.pm
+lib/Triceps/Label.pm
+lib/Triceps/LookupJoin.pm
+lib/Triceps/Opt.pm
+lib/Triceps/Row.pm
+lib/Triceps/Rowop.pm
+lib/Triceps/SimpleAggregator.pm
+lib/Triceps/SimpleOrderedIndex.pm
+lib/Triceps/Table.pm
+lib/Triceps/TableType.pm
+lib/Triceps/Unit.pm
+lib/Triceps/UnitTracerPerl.pm
+lib/Triceps/UnitTracerStringName.pm
+ppport.h
 t/Aggregator.t
+t/AggregatorType.t
+t/Collapse.t
+t/Fields.t
+t/FrameMark.t
+t/IndexType.t
+t/JoinTwo.t
+t/Label.t
+t/LookupJoin.t
+t/Opt.t
+t/Row.t
+t/RowType.t
+t/Rowop.t
 t/SimpleAggregator.t
+t/SimpleOrderedIndex.t
+t/SortedIndexType.t
+t/Table.t
+t/TableType.t
 t/Tray.t
 t/Triceps.t
-t/Label.t
-t/xVwap.t
-t/SortedIndexType.t
-t/xHelloWorld.t
-t/IndexType.t
-t/Collapse.t
-t/Rowop.t
-t/TableType.t
-t/makeRow.t
-t/UnitTracer.t
-t/Fields.t
-t/Opt.t
 t/Unit.t
-t/xHelloTable.t
-t/Table.t
-t/SimpleOrderedIndex.t
-t/AggregatorType.t
-t/LookupJoin.t
-t/xSimpleAggregator.t
-t/JoinTwo.t
-t/RowType.t
-t/FrameMark.t
-t/xTrafficAgg.t
-t/xSnippets.t
+t/UnitTracer.t
+t/makeRow.t
+t/xAgg.t
+t/xClear.t
 t/xCollapse.t
-TableType.xs
-AggregatorType.xs
-lib/Triceps/UnitTracerPerl.pm
-lib/Triceps/Unit.pm
-lib/Triceps/SimpleOrderedIndex.pm
-lib/Triceps/Fields.pm
-lib/Triceps/Table.pm
-lib/Triceps/SimpleAggregator.pm
-lib/Triceps/Collapse.pm
-lib/Triceps/AggregatorContext.pm
-lib/Triceps/Opt.pm
-lib/Triceps/Label.pm
-lib/Triceps/Row.pm
-lib/Triceps/LookupJoin.pm
-lib/Triceps/Rowop.pm
-lib/Triceps/TableType.pm
-lib/Triceps/JoinTwo.pm
-lib/Triceps/UnitTracerStringName.pm
-lib/Triceps.pm
-PerlAggregator.h
-vg.supp
-PerlAggregator.cpp
-PerlCallback.cpp
-Unit.xs
-Table.xs
-MANIFEST
-Tray.xs
-const-xs.inc
-Row.xs
-FrameMark.xs
-RowHandle.xs
-UnitTracer.xs
-Label.xs
-Rowop.xs
-WrapAggregatorContext.h
-PerlSortCondition.h
-TricepsPerl.h
-ppport.h
-BUILD
-Makefile.PL
-IndexType.xs
-README
+t/xHelloTable.t
+t/xHelloWorld.t
+t/xJoin.t
+t/xQuery.t
+t/xRunAnywhere.t
+t/xSelfJoin.t
+t/xSimpleAggregator.t
+t/xSnippets.t
+t/xTrafficAgg.t
+t/xVwap.t
+t/xWindow.t
 typemap
-Changes
-PerlCallback.h
+vg.supp
