@@ -7,6 +7,8 @@
 
 package Triceps::Rowop;
 
+our $VERSION = 'v1.0.1';
+
 # convert a rowop to a printable string, with name-value pairs
 # (printP stands for "print in Perl")
 package  Triceps::Rowop;
