@@ -6,3 +6,5 @@ Revision history for Perl extension Triceps.
 
 0.99  Wed Dec  7 22:37:26 2011
 	- first substantially complete version
+
+See the rest in the Developer's Guide, chapter "Release Notes".
